--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --primary-color:#adf0d4;
-    --secondary-color:#1fd8a4;
-    --bg-color:#0d1512;
+    --primary-color:#dbeafe;
+    --secondary-color:#60a5fa;
+    --bg-color:#060d24;
 }
 *{
     margin:0;
@@ -11,7 +11,7 @@
     transition-duration:200ms;
 }
 body{
-    background-color:var(--bg-color);
+    background-color:#0f172a;
     color:var(--primary-color);
     min-height:100vh;
     display:flex;
@@ -46,6 +46,8 @@ nav {
 }
 nav a {
     cursor:pointer;
+    text-decoration:none;
+    color:var(--primary-color);
 }
 nav a:hover{
     opacity:0.7;
@@ -56,6 +58,7 @@ main, section, .name-container{
 }
 main{
     gap:64px;
+    padding-bottom:65px;
 }
 section{
     gap:32px;
@@ -65,6 +68,7 @@ gap:8px;
 }
 .statscontainer{
     display:flex;
+    flex-direction:column;
     align-items:stretch;
     gap:24px;
 }
@@ -81,13 +85,91 @@ gap:8px;
 .stats{
     display:flex;
     flex-direction:column;
+    gap:14px;
 }
-.stats div{
+.stats > div{
     flex:1;
     display:flex;
     align-items:center;
     gap:8px;
 }
-..stats div i{
+.stats  > div i{
     font-size:1.4em;
+}
+.stats div div{
+    display:grid;
+    place-items:center;
+    min-width:30px;
+}
+.about-me{
+    line-height:1.5em;
+    width:80%;
+    margin-right:auto;
+}
+@media (min-width:640px) {
+    .statscontainer{
+        flex-direction:row;
+    }
+    .stats{
+        gap:0px;
+    }
+}
+.outreach{
+    display:flex;
+    align-items:center;
+    gap:14px;
+    color:var(--secondary-color);
+    cursor: pointer;
+    width:fix-content;
+    margin-right:auto;
+}
+.outreach:hover{
+    opacity:0.7;
+}
+.projectContainer{
+    display:flex;
+    flex-direction:column;
+    gap:24px;
+}
+.projectItem{
+    display:flex;
+    align-items:strecth;
+    gap:24px;
+}
+.headerText{
+    margin-bottom:24px;
+}
+.projectItem div> first-child{
+display:flex;
+flex-direction:column;
+gap:14px;
+}
+.projectItem div > last-child{
+    aspect-ratio:16/9;
+    max-width:30%;
+    overflow-hidden; 
+}
+
+.projectItem div:last-child img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+        border-radius:8px; 
+
+}
+.link-container{
+    display:flex;
+    align-items:center;
+    gap:32px;
+}
+.linkitem{
+    display:flex;
+    flex-direction:row !important;
+    align-items:center;
+    gap:8px !important;
+    padding-top:20px;
+    color:var(--primary-color);
+}
+..linkitem p{
+    font-size:0.9rem;
 }
